reports/data-types.log
Traceback (most recent call last):
  File "/Users/alexiacardona/.conda/envs/pythonProject4/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/alexiacardona/.conda/envs/pythonProject4/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/alexiacardona/.conda/envs/pythonProject4/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/alexiacardona/.conda/envs/pythonProject4/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/alexiacardona/.conda/envs/pythonProject4/lib/python3.10/asyncio/base_events.py", line 646, in run_until_complete
    return future.result()
  File "/Users/alexiacardona/.conda/envs/pythonProject4/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/alexiacardona/.conda/envs/pythonProject4/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/alexiacardona/.conda/envs/pythonProject4/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
a = b = 10

print("a is", a, "of type", type(a))
print("b is", b, "of type", type(b))

a=22
print("a is", a, "of type", type(a))
print("b is", b, "of type", type(b))

c = a/3
print(f"c is {c:.2f} of type {type(c)})

#convert c to integer
d = int(c)
print("d is", d, "of type", type(d))
------------------

[0;36m  Input [0;32mIn [9][0;36m[0m
[0;31m    print(f"c is {c:.2f} of type {type(c)})[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m unterminated string literal (detected at line 11)

SyntaxError: unterminated string literal (detected at line 11) (1129090795.py, line 11)

